# caos

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  Cargo.toml  README.md  Tiltfile  build-builtins.sh  demo-llm-summary.sh  deploy-fly.sh  flake.nix  run-tool  run-worker-bash.sh  rust-toolchain.toml  teardown-fly.sh  test-bash-worker.sh  test-deep-deps.sh  test-host-path.sh  test-rust-worker.sh
.caos-data/server-repo.git/: config
.caos-data/server-repo.git/hooks/: fsmonitor-watchman.sample  pre-rebase.sample  prepare-commit-msg.sample
.caos-data/server-repo.git/info/: refs
.caos-data/server-repo.git/objects/info/: packs
.caos-data/server-repo.git/objects/pack/: multi-pack-index  pack-32466a02d5f07bef7711070fdd9cecebe3ef7463.idx  pack-32466a02d5f07bef7711070fdd9cecebe3ef7463.mtimes  pack-32466a02d5f07bef7711070fdd9cecebe3ef7463.pack  pack-32466a02d5f07bef7711070fdd9cecebe3ef7463.rev  pack-e317b4d80fe9f7fd8118e9af7447e331fe718044.idx  pack-e317b4d80fe9f7fd8118e9af7447e331fe718044.rev
.caos-data/server-repo.git/refs/caos/: std
caos-tools/: build.sh  test.sh
caos-tools/lib/: bake.sh  build-final.sh  build-stage2.sh  build-stage2b.sh  build-stage2c.sh  image-build.sh  strip-bins.sh
crates/caos/: Cargo.toml  TUI.md
crates/caos-tui/: Cargo.toml  README.md
crates/caos-tui/src/: app.rs  args.rs  main.rs  ui.rs  workspace.rs
crates/caos/src/: chat.rs  lib.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/compute-server/: Cargo.toml
crates/compute-server/src/: main.rs
crates/fold-wasm/: Cargo.toml
crates/fold-wasm/src/: lib.rs
crates/isolate-common/: Cargo.toml
crates/isolate-common/src/: lib.rs
crates/isolate-host/: Cargo.toml
crates/isolate-host/src/: lib.rs  main.rs
crates/llm-stub/: Cargo.toml
crates/llm-stub/src/: main.rs
crates/object-server/: Cargo.toml
crates/object-server/src/: main.rs
crates/runnerd/: Cargo.toml
crates/runnerd/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: compute.rs  git.rs  main.rs  runner.rs  storage.rs  trace.rs
crates/worker-bash-tool/: Cargo.toml
crates/worker-bash-tool/src/: main.rs
crates/worker-cargo/: Cargo.toml
crates/worker-cargo/src/: decompose.rs  main.rs
crates/worker-common/: Cargo.toml
crates/worker-common/src/: lib.rs
crates/worker-deep-deps/: Cargo.toml
crates/worker-deep-deps/src/: main.rs
crates/worker-dirs-only/: Cargo.toml
crates/worker-dirs-only/src/: main.rs
crates/worker-file-count/: Cargo.toml
crates/worker-file-count/src/: main.rs
crates/worker-fold/: Cargo.toml
crates/worker-fold/src/: main.rs
crates/worker-hello/: Cargo.toml
crates/worker-hello/src/: main.rs
crates/worker-llm-step/: Cargo.toml
crates/worker-llm-step/src/: api.rs  bundle.rs  main.rs  progress.rs  tools.rs
crates/worker-llm-summary/: Cargo.toml
crates/worker-llm-summary/src/: main.rs
crates/worker-rgrep/: Cargo.toml
crates/worker-rgrep/src/: main.rs
crates/worker-runner/: Cargo.toml
crates/worker-runner/src/: main.rs
crates/worker-rustc/: Cargo.toml
crates/worker-rustc/src/: main.rs
design/: agent-harness.md  cargo-workers.md  commits.md  durable-resolution.md  fly-backend-sketch.md  isolate-runtime-spike.md  map-then.md  runner-pool-and-cloud-builds.md  runner-protocol.md  tui-backend.md
examples/consumer/: README.md  flake.nix
images/: bash-worker.sh  debian-base.ref  nix-base.ref
scripts/: dev-up.sh
src/: main.rs
tests/: run-all.sh  run.sh  trace-report.py
tests/bash-tool/: cli.sh  std-manifest
tests/caos-tools/: cli.sh  std-manifest
tests/cargo-check/: cli.sh
tests/cargo-check/broken/: Cargo.toml
tests/cargo-check/broken/src/: main.rs
tests/cargo-check/mini/: Cargo.toml
tests/cargo-check/mini/src/: main.rs
tests/cargo-crates/: cli.sh
tests/cargo-crates/ws/b/src/: main.rs
tests/cargo-self/: cli.sh
tests/chat/: cli.sh
tests/chat-offline/: cli.sh  std-manifest
tests/chat-online/: cli.sh  std-manifest
tests/commit/: cli.sh  commit-worker.rs  std-manifest  tool.sh
tests/deep-deps/: builtins  cli.sh  test.sh
tests/dirs-only/: builtins  cli.sh  std-manifest  test.sh
tests/dirs-only/tree/: top1.txt  top2.txt
tests/dirs-only/tree/dirA/: a2.txt
tests/dirs-only/tree/dirB/subdir/: s1.txt
tests/file-count/: builtins  cli.sh  test.sh
tests/fold-bench/: builtins  gen-tree.sh  test.sh
tests/fold-bench/tree/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d1/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d1/d1/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d1/d2/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d1/d3/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d2/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d2/d1/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d2/d2/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d2/d3/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d3/: f1.txt  f2.txt  f3.txt
tests/fold-bench/tree/d3/d1/: f1.txt  f2.txt  (+1 more)
tests/fold-wasm/: gen-tree.sh  test.sh
tests/fold-wasm/wide/: f1.txt  f2.txt
tests/fold-wasm/wide/d1/: f1.txt  f2.txt
tests/fold-wasm/wide/d2/: f1.txt  f2.txt
tests/lib/: build-bins.sh  build.sh  run-nested.sh  strip-bins.sh  suite-bake.sh  suite-images.sh  suite-stage2.sh  suite-stage2b.sh  suite-stage2c.sh  suite-stage3.sh  suite-summarize.sh  suite.sh
tests/llm-step/: cli.sh  smoke.sh  std-manifest
tests/proc-stack/: cli.sh  inner.sh
tests/rgrep/: cli.sh  std-manifest
tests/rgrep/tree/: a.txt
tests/rgrep/tree/dup1/: same.txt
tests/rgrep/tree/sub/: c.txt
tests/run-then/: checks.sh  cli.sh  combine.sh  cycle.sh  double.sh  driver.sh  outer.sh
tests/rust-worker/: builtins  cli.sh  greeter-edited.rs  greeter.rs  std-manifest  test.sh
tests/smoke/: cli.sh
tests/socket-in-caos/: cli.sh  inner-socket.sh  manual-inner.sh  manual-spike.sh
tests/suite-in-caos/: cli.sh  inner-suite.sh
tests/symlinks/: check.sh  cli.sh  test.sh
tests/symlinks/tree/: file.txt
tests/test-all/: cli.sh  run-test.sh
tests/test-in-caos/: cli.sh  inner-caos.sh
tests/unit/: cli.sh
tests/untracked/: check.sh  cli.sh  host.sh  test.sh
(+127 files in other folders)
