[workspace]
resolver = "2"
members = ["crates/client", "crates/object-server"]

# Name for crane's workspace-level derivations (fmt/test) so it doesn't warn
# about a missing package name at the workspace root.
[workspace.metadata.crane]
name = "caos-workspace"

# Shared across every workspace member so all binaries get the same small,
# static release build.
[profile.release]
strip = true
lto = true
codegen-units = 1
