[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/object-server",
    "crates/compute-server",
    "crates/worker-common",
    "crates/worker-hello",
    "crates/worker-fold",
    "crates/worker-file-count",
    "crates/worker-deep-deps",
]

# Name for crane's workspace-level derivations (fmt/test) so it doesn't warn
# about a missing package name at the workspace root.
[workspace.metadata.crane]
name = "caos-workspace"

# A version at the workspace root so crane's workspace-level derivations
# (fmt/test, the dev shell) don't fall back to a placeholder and warn. Members
# set their own version; this is just the root manifest's.
[workspace.package]
version = "0.1.0"

# Shared across every workspace member so all binaries get the same small,
# static release build.
[profile.release]
strip = true
lto = true
codegen-units = 1
