[package]
name = "caos-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "caos-tui"
path = "src/main.rs"

[dependencies]
caos = { path = "../caos" }
ratatui-core = { version = "0.1.2", features = ["std"] }
ratatui-crossterm = { version = "0.1.2", default-features = false, features = ["crossterm_0_29"] }
ratatui-widgets = { version = "0.3.2", default-features = false, features = ["std"] }
