[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
# Parse git objects (trees) returned by the object server. Same pure-Rust,
# static-musl-friendly config as the object-server crate, so the workspace
# shares a single gix build.
gix = { version = "0.84", default-features = false, features = ["sha1"] }
# Minimal blocking HTTP client. default-features = false keeps it to plain HTTP
# (no TLS) and, unlike heavier clients, it pulls no `url`/`idna` tree — so the
# build stays small, pure-Rust, and static.
minreq = { version = "2", default-features = false }
# Read/write extended attributes: each materialized path is tagged with the git
# hash it came from (`user.caos.hash`).
xattr = "1"
# `import-image` only: read a docker-archive image tarball — unpack it (tar),
# gunzip it (flate2, pure-Rust backend to stay static), and parse its
# manifest.json/config (serde_json).
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde_json = "1"
