[package]
name = "isolate-host"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = { version = "0.84", default-features = false, features = ["sha1"] }
minreq = { version = "2", default-features = false }
serde_json = "1"
tiny_http = "0.12"
wasmtime = { version = "46.0.1", default-features = false, features = ["runtime", "cranelift", "wat", "pooling-allocator"] }
