[package]
name = "object-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "object-server"
path = "src/main.rs"

[dependencies]
# Pure-Rust git access so the binary stays statically linked against musl with
# no C dependencies. default-features = false drops networking, worktree/diff,
# and other extras; we only need loose-object read/write + the SHA-1 backend.
# (zlib stays pure-Rust unless a zlib-ng/zlib-rs feature is opted in.)
gix = { version = "0.84", default-features = false, features = ["sha1"] }
# Minimal synchronous HTTP server: no async runtime, no TLS, pure Rust.
tiny_http = "0.12"
