[package]
name = "worker-cargo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker-cargo"
path = "src/main.rs"

[dependencies]
worker-common = { path = "../worker-common" }
# Manifest parsing for the per-crate decomposition (members, path deps,
# explicit target paths). Default features off: we only read.
toml = { version = "0.8", default-features = false, features = ["parse"] }
