[package]
name = "worker-fold"
version = "0.1.0"
edition = "2021"

# Glue over the `caos` CLI lives in worker-common; this crate is just the fold
# worker's logic, so it builds to a tiny static binary needing no shell.
[dependencies]
worker-common = { path = "../worker-common" }

[[bin]]
name = "worker-fold"
path = "src/main.rs"
